--- a/index.html
+++ b/index.html
@@ -318,6 +318,32 @@
                   />
                 </svg>
               </button>
+              <button
+                class="stop-button"
+                id="stopButton"
+                title="Stop generation"
+                aria-label="Stop generation"
+                style="display: none"
+              >
+                <svg
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="6"
+                    y="6"
+                    width="12"
+                    height="12"
+                    rx="2"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    fill="currentColor"
+                  />
+                </svg>
+              </button>
             </div>
           </div>
         </div>
@@ -478,6 +504,14 @@
               <label for="streamingToggle">Streaming Response</label>
               <label class="toggle-switch">
                 <input type="checkbox" id="streamingToggle" checked />
+            <div class="custom-control">
+              <label for="sendKeySelector">Send Key</label>
+              <select id="sendKeySelector">
+                <option value="enter">Enter</option>
+                <option value="shift-enter">Shift + Enter</option>
+                <option value="ctrl-enter">Ctrl + Enter</option>
+              </select>
+            </div>
                 <span class="slider"></span>
               </label>
             </div>
